tests/frontend_tests/error_if_close_paren.c
int main() {
  // error: expected ')' after 'a'
  if(a return 0;
}
